--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
+<!-- Novus ordo seclorum -->
 
 <html>
     <head>
         <title>PaitonTami Official</title>
         <link rel="icon" type="image/x-icon" href="images/Logo.png">
+        <script src="index.js"></script>
         <link rel="stylesheet" href="index.css">
         <meta charset="utf-8">
     </head>
     <body>
         <div align="center">
-            <h1>PaitonTami Official</h1>
+            <h1 id="WelcomeText">PaitonTami Official</h1>
+            <h4 id="Slogan">Novus ordo seclorum</h4>
         </div>
         <br>
         <br>
-        <div>
-            You are finally here...If you want to join the organisation you need to mail us here: <a id="link1" href=mailto:"paitontami@gmail.com">paitontami@gmail.com</a>
+        <br>
+        <div align="center">
+            <a href=mailto:"paitontami@gmail.com">
+                <button id="ContactUs">
+                    Contact US
+                </button>
+            </a>
         </div>
     </body>
 </html>
